src/style.scss
// Copyright (c) 2020 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

/* stylelint-disable
  selector-max-class,
  scss/selector-no-redundant-nesting-selector,
  max-nesting-depth,
  selector-max-combinators,
  selector-max-compound-selectors,
  no-descending-specificity,
  at-rule-no-unknown,
  selector-no-qualifying-type,
  declaration-block-no-redundant-longhand-properties,
  declaration-no-important */

// Import Auro tokens
@import './../node_modules/@alaskaairux/design-tokens/dist/tokens/SCSSVariables';
@import './../node_modules/@alaskaairux/design-tokens/dist/tokens/SassCustomProperties';

@import './../node_modules/@alaskaairux/webcorestylesheets/dist/breakpoints';
@import './../node_modules/@alaskaairux/webcorestylesheets/dist/core';

// Support for auroElement styles
@import './../node_modules/@alaskaairux/webcorestylesheets/dist/auroElement/auroElement';

// container styles - defines the look of the outer custom component
:host {
  --size-lgsm: 1.875rem;
  --size-xlsm: 2.75rem;
  --size-mdxxs: 1.2rem;

  position: relative;
  display: block;

  cursor: text;
}

:host(:not(.hover)) {
  .inputElement {
    pointer-events: none;
  }
}

.passwordToggle {
  visibility: hidden;
}

.passwordIcon--show {
  .passwordToggle {
    cursor: pointer;
    visibility: visible;
  }
}

// this is to disable the toggle-password feature in MS Edge only
input {
  &::-ms-reveal,
  &::-ms-clear {
    display: none;
  }

  &::placeholder {
    color: transparent;
  }

  &:focus {
    &::placeholder {
      color: var(--auro-color-text-secondary-on-light);
    }
  }
}

.inputElement {
  position: relative;
  width: 100%;

  min-height: calc(var(--auro-size-700, 56px) + 2px);
  max-height: calc(var(--auro-size-700, 56px) + 2px);

  padding: var(--auro-size-xl);
  padding-right: 1.875rem;
  padding-bottom: var(--auro-size-xs);
  padding-left: 0;

  margin: 0;
  background-color: transparent;
  caret-color: var(--auro-color-text-secondary-on-light);
  font-family: var(--auro-font-family-default);
  font-size: 1rem;
  transition: all .3s cubic-bezier(.215, .61, .355, 1);

  &:focus {
    outline: none;

    & ~ .iconContainer {
      background: none;

      .iconButton {
        z-index: auto;

        // This is needed because iOS chooses to
        // turn the icons blue
        color: var(--auro-color-text-primary-on-light);

        opacity: 1;
      }
    }
  }

  &:focus,
  &--filled {
    & + .inputElement-label {
      @extend %activeLabel;
    }
  }

  &:disabled {
    background: none;
    color: var(--auro-color-text-disabled-on-light);
  }

  &:invalid {
    box-shadow: none;
  }
}

:host(:not([borderless])) {
  .inputElement {
    border-radius: 0;
    border: 0 solid;
    border-color: var(--auro-color-border-primary-on-light);
    border-bottom-width: 2px;

    &:disabled {
      border-color: var(--auro-color-border-disabled-on-light);
    }

    &:focus {
      border-color: var(--auro-color-ui-default-on-light);
    }
  }
}

:host([borderless]) {
  .inputElement {
    border: 0 solid;
    border-color: transparent;
    border-bottom-width: 2px;
  }
}

.inputElement-label {
  position: absolute;
  top: 0;
  left: 0;

  padding: 0;
  padding-top: 1.8rem;

  color: var(--auro-color-text-secondary-on-light);
  pointer-events: none;
  transition: all .3s cubic-bezier(.215, .61, .355, 1);
}

.inputElement-labelIcon--no-value {
  left: var(--size-lgsm);
}

.inputElement-label--sticky {
  @extend %activeLabel;
}

.inputElement-helpText {
  margin: var(--auro-size-xxs) 0;
  color: var(--auro-color-text-secondary-on-light);
  font-size: var(--auro-text-body-size-xs);
  line-height: 1rem;
}

.inputElement-icon {
  display: flex;
  justify-content: flex-end;
  pointer-events: auto;

  * {
    margin-left: var(--auro-size-xs);
  }
}

.iconButton {
  z-index: -1;
  padding: 0;
  border: none;
  margin: 0;
  background: none;
  opacity: 0;

  &:active {
    z-index: auto;

    opacity: 1;
  }

  &:hover {
    cursor: pointer;
  }
}

.iconContainer {
  position: absolute;
  top: calc(2rem - .1rem);
  right: 0;

  pointer-events: none;
}

.is-disabled {
  color: var(--auro-color-text-disabled-on-light);
}

:host([disabled]) {
  color: var(--auro-color-text-disabled-on-light);
}

// =-=-=-=-=-=-=-=-= creditCard -=-=-=-=-=-=-=-=-=-=-=-=-

.inputIcon,
.creditCard {
  padding-left: var(--size-lgsm);
}

.accentIcon {
  position: absolute;
  top: 4px;
  left: 0;

  display: flex;
  height: var(--auro-size-xl);
  align-items: center;
  margin-top: var(--auro-size-lg);
}

// =-=-=-=-=-=-=-=-= Extends -=-=-=-=-=-=-=-=-=-=-=-=-

%activeLabel {
  left: 0;

  padding: 0;
  padding-top: var(--auro-size-xxs);

  font-size: var(--auro-text-body-size-xs);
}

// =-=-=-=-=-=-=-=-= bordered -=-=-=-=-=-=-=-=-=-=-=-=-
:host([bordered][icon][type='credit-card']),
:host([bordered][type='month-day-year']),
:host([bordered][type='year-month-day']),
:host([bordered][type='month-year']),
:host([bordered][type='month-fullYear']) {
  .inputElement {
    padding-left: var(--size-xlsm);
  }

  .inputElement-label {
    left: var(--size-xlsm);
  }

  .accentIcon {
    top: -6px;
    left: var(--auro-size-sm);
  }
}

:host([activeLabel]) {
  .inputElement {
    & + .inputElement-label {
      padding: 0;
      padding-top: var(--auro-size-xxs);

      font-size: var(--auro-text-body-size-xs);
    }
  }

  label {
    left: var(--auro-size-sm);

    &[class*='inputElement-'] {
      left: var(--auro-size-sm);
    }

    &[class*='inputElement-labelIcon'] {
      left: var(--size-xlsm);
    }
  }
}


:host([bordered]) {
  .inputElement {
    padding-right: 2.375rem;
    padding-left: var(--auro-size-sm);
    border: 1px solid var(--auro-color-border-primary-on-light);
    border-radius: var(--auro-border-radius);
    background-color: var(--auro-color-base-white);

    &:focus {
      border-color: var(--auro-color-ui-default-on-light);

      @include auro_breakpoint--sm {
        outline: 1px solid var(--auro-color-ui-default-on-light);
      }
    }

    @include auro_breakpoint--sm {
      outline-width: 1px;
      outline-style: solid;
      outline-color: transparent;
    }

    &:disabled {
      border-color: var(--auro-color-alert-disabled-on-light);

      @include auro_breakpoint--sm {
        outline: 1px solid var(--auro-color-alert-disabled-on-light);
      }
    }

    &:focus,
    &--filled {
      & + .inputElement-label {
        padding-top: var(--auro-size-xxs);
      }
    }
  }

  .inputElement-label {
    left: var(--auro-size-sm);
    padding-top: var(--size-mdxxs);

    &--sticky {
      padding-top: var(--auro-size-xxs);
    }
  }

  .iconContainer {
    top: var(--size-mdxxs);
    right: var(--auro-size-sm);
  }
}

:host([type='password']) {
  .inputElement {
    padding-right: 68px;
  }
}

:host([bordered][type='password']) {
  .inputElement {
    padding-right: 72px;
  }
}

/**
 * Invalid state styles
 * valid attribute is not present on the element until after
 * validation is wrong the first time. A required HTML5 input
 * starts with the :invalid pseudo-selector even if our
 * validation script has not been run.
 */
:host(:not([validity])) {
  .alertIcon {
    display: none;
  }
}

:host([validity]:not([validity='valid'])) {
  .inputElement {
    &:invalid {
      border-color: var(--auro-color-alert-error-on-light);

      @include auro_breakpoint--sm {
        outline-color: var(--auro-color-alert-error-on-light);
      }
    }
  }

  .inputElement-helpText {
    color: var(--auro-color-alert-error-on-light);
  }

  .iconContainer {
    color: var(--auro-color-alert-error-on-light);
  }
}

:host([validity='customError']) {
  .inputElement {
    border-color: var(--auro-color-alert-error-on-light) !important;

    @include auro_breakpoint--sm {
      outline-color: var(--auro-color-alert-error-on-light) !important;
    }
  }
}

